# Projet-Systemes-Distribues

./: CMakeLists.txt  readme.md
calcul/: available.py  available.sh  calcul.cpp
data/: input.csv
visualisation/: visualisation.cpp
